# py_clean_arch_task_manager

./: README.md  pyproject.toml  scripts.py
task_manager/: app.py
task_manager/domain/entities/: __init__.py  task.py  user.py
task_manager/domain/enums/: __init__.py  task_priority.py  task_status.py
task_manager/domain/input/: task.py
task_manager/domain/ports/: repository.py  repository_factory.py  task_repository.py
task_manager/domain/use_cases/: create_task.py  task_use_cases.py
task_manager/repository/: in_memory_repo_factory.py  memrepo.py
task_manager/repository/in_memory_repositories/: __init__.py  generic_memrepo.py  task_memrepo.py  user_memrepo.py
task_manager/web/: app.py
task_manager/web/routers/: __init__.py  task_router.py  user_router.py
tests/unit/domain/: test_task.py  test_user.py
tests/unit/domain/entities/: test_task.py  test_user.py
tests/unit/domain/use_cases/: test_create_task.py
tests/unit/web/: conftest.py  test_task_router.py
