[tool.poetry]
name = "py-clean-arch-task-manager"
version = "0.1.0"
description = "Clean Architecture Demonstration"
authors = ["Dejan"]
readme = "README.md"
packages = [{include = "py_clean_arch_task_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
ruff = "0.0.287"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]